test/LitTests/Parser/Class/MethodDefInClassDecl.loci
// RUN: %locic %s --verify > %t
// RUN: FileCheck < %t %s

class TestClass {
	// CHECK: .loci:6:2: error: unexpected method definition; was expecting method declaration
	void method() { }
}
